syntax = "proto3";

package NAttributes;

import "kernel/attributes/restrictions/proto/single_attr_restriction.proto";

message TAttrRestrictionIteratorProto {
    TSingleAttrRestriction Restriction = 1;
    uint32 IterIndex = 2;
}
